fix mobile spacing

--- a/components/post/ContentInformation/ContentInformation.scss
+++ b/components/post/ContentInformation/ContentInformation.scss
@@ -12,6 +12,8 @@
     //   // margin: 15px 0;
     // }
 
+    padding-bottom: 75px;
+
     .tickerSpacer {
       height: 20px;
       display: block;
@@ -29,6 +31,8 @@
       // margin-bottom: 10px;
       font-weight: 600;
       // margin-bottom: 25px;
+      display: flex;
+      align-items: center;
     }
     .separator {
       border-bottom: 1px #e5e5e5 solid;
